gccida/g0/mention_regs
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/cse.c:1663:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+2Ch] [rbp-24h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/cse.c:1713:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/cse.c:1714:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)x + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/cse.c:1726:2: error: expected expression
 struct cse_reg_info = cached_cse_reg_info; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/cse.c:1728:2: error: expected expression
 struct cse_reg_info = get_cse_reg_info( i_0); 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/cse.c:1779:55: error: use of undeclared identifier 'machine_mode'
remove_invalid_subreg_refs( i_1, *( _DWORD *)&x[1], ( machine_mode)*( ( unsigned __int8 *)x + 2)); 
                                                      ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mention_regs/src/obj/cse.o] Error 1
